@@ -1,6 +1,6 @@
-# Copyright 1999-2011 Gentoo Foundation
+# Copyright 1999-2012 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/leechcraft-popishu/leechcraft-popishu-0.4.97.ebuild,v 1.1 2011/12/31 12:03:16 maksbotan Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/leechcraft-popishu/leechcraft-popishu-0.5.0.ebuild,v 1.1 2012/02/09 11:05:27 maksbotan Exp $
 
 EAPI="4"
 
