@@ -1,6 +1,13 @@
 # ChangeLog for app-editors/leechcraft-popishu
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-editors/leechcraft-popishu/ChangeLog,v 1.9 2012/02/04 19:09:26 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-editors/leechcraft-popishu/ChangeLog,v 1.10 2012/02/09 11:05:27 maksbotan Exp $
+
+*leechcraft-popishu-0.5.0 (09 Feb 2012)
+
+  09 Feb 2012; Maxim Koltsov <maksbotan@gentoo.org>
+  +leechcraft-popishu-0.5.0.ebuild, -leechcraft-popishu-0.4.96-r1.ebuild,
+  -leechcraft-popishu-0.4.97.ebuild:
+  Bumped LeechCraft to 0.5.0, removed 0.4.96-r1 and 0.4.97
 
   04 Feb 2012; Agostino Sarubbo <ago@gentoo.org>
   leechcraft-popishu-0.4.99.ebuild:
